# study_judy

./: README.md
judy-1.0.5/: CMakeLists.txt  config.status  libtool
judy-1.0.5/src/: h7_config.h  sh_build
judy-1.0.5/src/Judy1/.deps/: Judy1Cascade.Plo  Judy1Count.Plo  Judy1CreateBranch.Plo  Judy1Decascade.Plo  Judy1First.Plo  Judy1FreeArray.Plo  Judy1InsertBranch.Plo  Judy1MallocIF.Plo  Judy1MemActive.Plo  Judy1MemUsed.Plo  Judy1Set.Plo  Judy1SetArray.Plo  Judy1Tables.Plo  Judy1Test.Plo  Judy1Unset.Plo  libcount_la-Judy1ByCount.Plo  libinline_la-j__udy1Test.Plo  libnext_la-Judy1Next.Plo  libnext_la-Judy1NextEmpty.Plo  libprev_la-Judy1Prev.Plo  libprev_la-Judy1PrevEmpty.Plo
judy-1.0.5/src/JudyCommon/: JudyPrintJP.c
judy-1.0.5/src/JudyCommon/.deps/: JudyMalloc.Plo
judy-1.0.5/src/JudyHS/.deps/: JudyHS.Plo
judy-1.0.5/src/JudyL/.deps/: JudyLCascade.Plo  JudyLCount.Plo  JudyLCreateBranch.Plo  JudyLDecascade.Plo  JudyLDel.Plo  JudyLFirst.Plo  JudyLFreeArray.Plo  JudyLGet.Plo  JudyLIns.Plo  JudyLInsArray.Plo  JudyLInsertBranch.Plo  JudyLMallocIF.Plo  JudyLMemActive.Plo  JudyLMemUsed.Plo  JudyLTables.Plo  libcount_la-JudyLByCount.Plo  libinline_la-j__udyLGet.Plo  libnext_la-JudyLNext.Plo  libnext_la-JudyLNextEmpty.Plo  libprev_la-JudyLPrev.Plo  libprev_la-JudyLPrevEmpty.Plo
judy-1.0.5/src/JudySL/.deps/: JudySL.Plo
judy-1.0.5/tool/.deps/: jhton.Po
